# wso-register

./: README.md  pyproject.toml
wso_register/: __init__.py  __main__.py  group_data.py  physical_group.py  setup.py  wso_data.py
